Bug 1162649 - Don't call setOpaque:NO or setHasShadow:NO for non-popup windows;r=mstange